<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">音乐播放器</string>
    <string name="btn_pre">上一首</string>
    <string name="btn_play">播放</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_stop">停止</string>
    <string name="btn_next">下一首</string>
    <string name="btn_synchro">开始同步</string>
    <string name="btn_exit">退出</string>

    <string name="app_name_next">"WiFiDirectActivity "</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enable_p2p_button">PP On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="pp_off_warning">Enable PP from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="select_music">选择音乐</string>

</resources>